fix left-aligned doc on desktop

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 html {
   margin: 0;
   padding: 42px 16px 60px;
-  width: calc(210mm + 16px * 2);
+  min-width: calc(210mm + 16px * 2);
   background-color: #f5f5f5;
 }
 
